# Rust_jipity

./: .env  Cargo.toml  README.md
src/: main.rs
src/ai_functions/schemas/: api_schemas.json
src/apis/: call_request.rs
src/helpers/: command_lines.rs  general.rs  mod.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs
src/models/agents/: agents_architects.rs  agents_backend.rs  agents_traits.rs  mod.rs
src/models/agents_manager/: managing_agent.rs
src/models/general/: llm.rs
