[package]
name = "auto_gippity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.23", features = ["json"]}
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.35.1",  features = ["full"]}
async-trait = "0.1.74"
webbrowser = "0.8.12"
strum = "0.25.0"
strum_macros = "0.25.3"
ai_functions = "0.1.1"
crossterm = "0.27.0"
